--- a/meteor/client/components/login/choices/choices.html
+++ b/meteor/client/components/login/choices/choices.html
@@ -15,7 +15,7 @@
         </ul>
     </div>
     <div class="list-block">
-        <div class="list-block-label">{{competition_notice}}</div>
+        <div class="list-block-label">{{contest_notice}}</div>
     </div>
     <div class="footer">
         <table align="center">
