--- a/meteor/client/components/offline/offline.html
+++ b/meteor/client/components/offline/offline.html
@@ -8,7 +8,7 @@
             <div class="list-block-label" style="color:#455A64; padding-left: 10%; padding-right: 10%">Wir
                 können den Verwaltungsserver nicht erreichen!
                 <br> Bitte setzen sie sich so bald wie möglich mit ihrem Systemadministrator in Verbindung um diesen Teil der Seite wieder
-                nutzen zu können oder gehen sie zum Login, um dieses gerät zur Datenein/ausgabe zu nutzen.
+                nutzen zu können oder gehen sie zum Login, um dieses Gerät zur Datenein/ausgabe zu nutzen.
             </div>
             <div class="list-block t-center">
                 <div id="goToLoginButton" class="big-button" style="background-color: green">
