--- a/meteor/client/components/popup.html
+++ b/meteor/client/components/popup.html
@@ -1,13 +1,13 @@
 <template name="popup">
     <div class="popup {{class}}" style="overflow: hidden; z-index: 20001">
-        <div class="content-block" style="height: 100%;">
-            <div style="height: 15%;">
+        <div class="content-block">
+            <div class="popup-header">
                 <a href="#" class="close-popup"><i class="f7-icons vcenterIcon link"
                                                    style="float: left;">close</i></a>
                 <h1 class="t-center">{{title}}</h1>
                 <h5 class="t-center">{{subtitle}}</h5>
             </div>
-            <div style="height: calc(85% - 35px); overflow-y: auto;">
+            <div class="scrollable-content">
                 {{>Template.dynamic template=content data=data}}
             </div>
         </div>
