Improved csv import

--- a/meteor/client/components/config/logPopup/logPopup.html
+++ b/meteor/client/components/config/logPopup/logPopup.html
@@ -3,7 +3,7 @@
 </template>
 
 <template name="logPopupContent">
-    <table class="logTable">
+    <table class="popupTable">
         <tr>
             <th></th>
             <th>Uhrzeit</th>
