--- a/meteor/client/components/offline/offline.html
+++ b/meteor/client/components/offline/offline.html
@@ -11,7 +11,7 @@
                 nutzen zu können oder gehen sie zum Login, um dieses Gerät zur Datenein/ausgabe zu nutzen.
             </div>
             <div class="list-block t-center">
-                <div id="goToLoginButton" class="big-button" style="background-color: green">
+                <div id="goToLoginButton" class="big-button" style="background-color: #4CAF50;">
                     Zum Login
                 </div>
             </div>
