Removed unnecessary helper

--- a/meteor/client/components/config/athleteList/athleteList.html
+++ b/meteor/client/components/config/athleteList/athleteList.html
@@ -84,7 +84,7 @@
                                                 {{else}}
                                                     <input type="text" class="name-input"
                                                            style="display: inline-block; width: 100%"
-                                                           value="{{fullName a}}" placeholder="Vor-/Nachname"
+                                                           value="{{a.getFullName}}" placeholder="Vor-/Nachname"
                                                            data-id="{{a.id}}">
                                                 {{/if}}
                                             </span>
