--- a/meteor/client/components/config/athleteList/athleteList.html
+++ b/meteor/client/components/config/athleteList/athleteList.html
@@ -26,7 +26,7 @@
         {{/if}}
 
         {{#each g in groups}}
-            {{> group g=g}}
+            {{> config_group g=g}}
         {{/each}}
         {{#if not readOnly}}
             <div class="content-block t-center button-highlight add-group"><i class="f7-icons"
