--- a/meteor/client/components/config/athleteList/templates/group.html
+++ b/meteor/client/components/config/athleteList/templates/group.html
@@ -1,26 +1,27 @@
 <template name="config_group">
-    <div class="content-block-title collapsible collapse-height-100 {{#if g.collapsed}}collapsed{{/if}}"
-         style="position: relative" data-gid="{{g.id}}">
-        {{g.name}}
+    {{#with getGroup gid}}
+        <div class="content-block-title collapsible collapse-height-100 {{#if collapsed}}collapsed{{/if}}"
+             style="position: relative" data-gid="{{id}}">
+            {{name}}
         {{#if not readOnly}}
             <i class="fa fa-pencil rename-group" aria-hidden="true"
                style="cursor: pointer; padding-left:5px"></i>
             <i class="fa fa-remove remove-group" aria-hidden="true"
                style="cursor: pointer; padding-left:5px"></i>
         {{/if}}
-        <div class="align-right fade {{#if not (isEmpty g.athletes)}}fade-in{{/if}}"
-             style="position: absolute; bottom: 0; right: 0; cursor: pointer;">
+            <div class="align-right fade {{#if not (isEmpty athletes)}}fade-in{{/if}}"
+                 style="position: absolute; bottom: 0; right: 0; cursor: pointer;">
             <i class="f7-icons collapse-group" style="font-size: 14px;">chevron_up</i>
         </div>
     </div>
     <div class="list-block accordion-list">
-        <ul id="athlete-list-{{g.id}}">
-            {{#each a in g.athletes}}
-                {{> config_athlete a=a index=@index}}
+        <ul id="athlete-list-{{id}}">
+            {{#each a in athletes}}
+                {{> config_athlete aid=a gid=gid index=@index}}
             {{/each}}
             {{#if not readOnly}}
                 <li class="button-highlight add-athlete collapsible collapse-height-100
-                            {{#if g.collapsed}}collapsed{{/if}}" data-id="{{g.id}}">
+                            {{#if collapsed}}collapsed{{/if}}" data-id="{{id}}">
                     <div class="item-content">
                         <div class="item-media">
                             <i class="f7-icons" style="margin-left: 10px;">add</i>
@@ -38,4 +39,5 @@
         </ul>
         <!--<div class="list-block-label">List block label text goes here</div>-->
     </div>
+    {{/with}}
 </template>
