--- a/meteor/client/components/output/popovers/filter.html
+++ b/meteor/client/components/output/popovers/filter.html
@@ -4,39 +4,37 @@
         <div class="popover-inner">
             <div class="list-block accordion-list">
                 <ul>
-                    {{#with groupSettings}}
-                        <li class="accordion-item">
-                            <a href="" class="item-link item-content">
-                                <div class="item-media"><i class="f7-icons">persons</i></div>
-                                <div class="item-inner">
-                                    <div class="item-title">Gruppen</div>
-                                    <div class="item-after">{{text}}</div>
-                                </div>
-                            </a>
-                            <div class="accordion-item-content" style="padding-left: 5%;">
-                                <div class="list-block">
-                                    <ul>
-                                        {{#each g in groupNames}}
-                                            <li>
-                                                <div class="item-content">
-                                                    <div class="item-inner">
-                                                        <div class="item-title label">{{g}}</div>
-                                                        <div class="item-input">
-                                                            <label class="label-switch">
-                                                                <input type="checkbox" {{groupChecked g}}>
-                                                                <div class="checkbox" data-type="group"
-                                                                     data-attr="{{g}}"></div>
-                                                            </label>
-                                                        </div>
+                    <li class="accordion-item">
+                        <a href="" class="item-link item-content">
+                            <div class="item-media"><i class="f7-icons">persons</i></div>
+                            <div class="item-inner">
+                                <div class="item-title">Gruppen</div>
+                                <div class="item-after">{{groupSettingsText}}</div>
+                            </div>
+                        </a>
+                        <div class="accordion-item-content" style="padding-left: 5%;">
+                            <div class="list-block">
+                                <ul>
+                                    {{#each g in groupNames}}
+                                        <li>
+                                            <div class="item-content">
+                                                <div class="item-inner">
+                                                    <div class="item-title label">{{g}}</div>
+                                                    <div class="item-input">
+                                                        <label class="label-switch">
+                                                            <input type="checkbox" {{groupChecked g}}>
+                                                            <div class="checkbox" data-type="group"
+                                                                 data-attr="{{g}}"></div>
+                                                        </label>
                                                     </div>
                                                 </div>
-                                            </li>
-                                        {{/each}}
-                                    </ul>
-                                </div>
+                                            </div>
+                                        </li>
+                                    {{/each}}
+                                </ul>
                             </div>
-                        </li>
-                    {{/with}}
+                        </div>
+                    </li>
                     {{#with genderSettings}}
                         <li class="accordion-item">
                             <a href="" class="item-link item-content">
