--- a/meteor/client/components/output/popovers/sorting.html
+++ b/meteor/client/components/output/popovers/sorting.html
@@ -20,9 +20,27 @@
                     {{/each}}
                 </ul>
             </div>
-            <div class="button-highlight sorting-button">
-                <div class="left open-popup" data-popup=".popup-help">Hilfe</div>
-                <div class="Right sorting-reset-button">Auf Standart Zurücksetzen</div>
+            <div class="list-block" style="padding-top: 0; margin-top: 0;">
+                <ul>
+                    <li>
+                        <div class="item-content">
+                            <div class="item-inner">
+                                <div class="button-highlight" style="text-align: center; width: 100%;">
+                                    <div class="open-popup" data-popup=".popup-help">Hilfe</div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="item-content">
+                            <div class="item-inner">
+                                <div class="button-highlight" style="text-align: center; width: 100%;">
+                                    <div class="Right sorting-reset-button">Auf Standart Zurücksetzen</div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
@@ -43,7 +61,7 @@
             <li>Punkte: Gesamtpunktzahl</li>
             <li>Jahrgang: Jung nach Alt</li>
             <li>Gruppe: Gruppenzugehörigkeit</li>
-            <li>Geschlecht: Männlich/Weiblich/Weitere</li>
+            <li>Geschlecht: Männlich/Weiblich</li>
         </ul>
 
         Das erste Attribut in der Liste wird genutzt, um die Einträge zu gruppieren, alle darauf folgenden Attribute werden zur Sortierung der
