Fixed readOnly in athlete view

--- a/meteor/client/components/config/athleteList/templates/athlete.html
+++ b/meteor/client/components/config/athleteList/templates/athlete.html
@@ -49,7 +49,8 @@
                 </div>
                 {{#if not readOnly}}{{#if not g.collapsed}}
                     <span class="align-right remove-athlete delete-icon"><i class="f7-icons"
-                                                                            style="font-size: 17px; padding-right: 5px;">close_round</i></span>{{/if}}{{/if}}
+                                                                            style="font-size: 17px; padding-right: 5px;">close_round</i></span>
+                {{/if}}{{/if}}
             </div>
         </a>
         <div class="accordion-item-content">
