Replaced sie with Sie

--- a/meteor/client/components/config/overview/competitionTypePopup/competitionTypePopup.html
+++ b/meteor/client/components/config/overview/competitionTypePopup/competitionTypePopup.html
@@ -1,5 +1,5 @@
 <template name="contestTypeCreatePopup">
-    {{>popup class="popup-contestType" title="Wettkampfarten" subtitle="Wählen sie die Wettkampfart" content="contestTypeCreatePopupContent"}}
+    {{>popup class="popup-contestType" title="Wettkampfarten" subtitle="Wählen Sie die Wettkampfart" content="contestTypeCreatePopupContent"}}
 </template>
 
 <template name="contestTypeCreatePopupContent">
@@ -22,7 +22,7 @@
                             <div class="swipeout-actions-right">
                                 <a href="#" class="name-action bg-blue">
                                     <input type="text" class="contestNameInput" style="color: #f4f4f4;"
-                                           placeholder="Wählen sie einen Namen"/>
+                                           placeholder="Wählen Sie einen Namen"/>
                                 </a>
                                 <a href="#" class="name-action bg-green addContestSubmit">
                                     Wettkampf erstellen
