--- a/meteor/client/components/login/login/omni_login.html
+++ b/meteor/client/components/login/login/omni_login.html
@@ -28,10 +28,8 @@
                         </td>
                     </tr>
                 </table>
-                <div class="list-block-label" style="padding-left: 10%; padding-right: 10%">Bitte melden sie sich mit
-                    dem
-                    Passwort an, welches sie von dem
-                    Administrator erhalten haben.
+                <div class="list-block-label" style="padding-left: 10%; padding-right: 10%">Bitte melden Sie sich mit
+                    dem Passwort an, welches Sie von dem Administrator erhalten haben.
                 </div>
             </div>
         </div>
