Changed new competition description (fixes #178)

--- a/meteor/client/components/config/overview/competitionTypePopup/competitionTypePopup.html
+++ b/meteor/client/components/config/overview/competitionTypePopup/competitionTypePopup.html
@@ -22,7 +22,7 @@
                             <div class="swipeout-actions-right">
                                 <a href="#" class="name-action bg-blue">
                                     <input type="text" class="contestNameInput" style="color: #f4f4f4;"
-                                           placeholder="Wählen Sie einen Namen"/>
+                                           placeholder="Name für den Wettkampf"/>
                                 </a>
                                 <a href="#" class="name-action bg-green addContestSubmit">
                                     Wettkampf erstellen
